	  untested conditions (2014-1-21).

6.34 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/system/cle:  Add a EMACS-like command line editor.  This CLE,
	  is really more like readline than the NuttX readline is!  (2014-02-02).
	* apps/nshlib: Use of the standard tiney readline (about .25KB) is now
	  an option and can be replaces with the EMACX-like CLE (about 2KB)
	  (2014-02-02).
	* Several changes to restore Windows native build (2014-2-7)
	* apps/examples/touchscreen:  Can now be configured to work with a mouse
	  interface as well (2014-2-10).
	* Several files changes based on complaints from the tool CppCheck.  Some
	  latent bugs were fixed (and most likely some new typos were introduced)
	  (2014-2-10).
	* apps/examples/nximage/Kconfig and apps/examples/uip/Kconfig: Incomplete
	  Kconfig files fleshed out by Alan Carvalho de Assis (2014-2-18).
	* apps/nshlib: 'rmdir' can now be used in the pseudo-filesystem.  Hence,
	  the command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'mkdir' can now be used in the pseudo-filesystem.  Hence,
	  the command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'mv' can now be used in the pseudo-filesystem.  Hence,
	  the 'mv' command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'rm' can now be used to remove nodes frm the pseudo-
	  filesystem.  Hence, the 'rm' command needs to be available even if there
	  are no write-able filesystem enabled (2014-2-20).
	* CONFIG_DISABLE_PSEUDOFS_OPERATIONS: This new configuration setting
	  basically backs out the recent changes to mv, rm, mkdir, and rmdir
	  (2014-2-20).
	* nshlib/Kconfig:  Use CONFIG_DEFAULT_SMALL in selecting default
	  settings (2014-2-20).
	* nshlib/nsh_telnetd.c:  Use strncpy vs strcpy to avoid overrun the
	  username and password buffers.  From Bertold Van den Bergh (2014-2-22).
